--- a/package.json
+++ b/package.json
@@ -30,14 +30,16 @@
     "extract-text-webpack-plugin": "2.1.2",
     "html-webpack-plugin": "^2.30.1",
     "node-sass": "^4.5.3",
+    "nodemon": "^1.11.0",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
     "webpack-dev-server": "^2.7.1"
   },
   "scripts": {
-    "start": "BABEL_ENV=server node src/server/index.js",
+    "start": "BABEL_ENV=server nodemon src/server/index.js",
     "start:dev": "webpack-dev-server --config webpack/webpack.config.babel.js --color --inline --open --content-base",
     "build:client": "webpack -p --config webpack/webpack.config.babel.js",
-    "build:server": "BABEL_ENV=server babel src/components --out-dir ./src/server/components"
+    "build:server": "BABEL_ENV=server babel src/components --out-dir ./src/server/components",
+    "build": "npm run build:client & npm run build:server"
   }
 }
